--- a/CourseCleanup/Content/Site.css
+++ b/CourseCleanup/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #565A5C;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,21 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.logo-container {
+    padding-bottom: 20px;
+}
+
+.panel {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.control-label {
+    margin-right: 10px;
+}
+
+.float-right {
+    float: right;
 }
