course shells added.

--- a/CourseCleanup/Views/Home/Index.cshtml
+++ b/CourseCleanup/Views/Home/Index.cshtml
@@ -4,7 +4,12 @@
     ViewBag.Title = "Home Page";
 }
 
-@if (Model.Authorized)
+@if (true)
+{
+    Html.RenderPartial("_CourseCleanup", Model);
+}
+
+@*@if (Model.Authorized)
 {
     Html.RenderPartial("_CourseCleanup", Model);
 }
@@ -22,4 +27,4 @@ else
             @ViewBag.error
         </div>
     }
-}
+}*@
