Added enrollments to check for activity for a course.

--- a/CourseCleanup/Views/Home/_IndexHeader.cshtml
+++ b/CourseCleanup/Views/Home/_IndexHeader.cshtml
@@ -3,13 +3,14 @@
     <a href="https://ucdenver.instructure.com">https://ucdenver.instructure.com</a>
 </p>
 <p>
-    CourseCleanup is a HangFire web app that will allow an admin to run a query to list all course shells for a given term range.  A course shell is a course that has no content or activity.  
-    Once the report is generated, the user will receive an email notifying them that their report is ready.  The user will be able to click a link to view the generated table of course shells.
-
+    CourseCleanup is a HangFire web app that will allow an admin to run a query to list all unused courses for a given term range.  A course shell is a course that has no content or activity.  
+    Once the report is generated, the user will receive an email notifying them that their report is ready.  The user will be able to click a link to view the generated table of unused courses.
+    <br /><br />
     The user will have the ability to:
-    - Select course shells for deletion
-    - Delete all course shells
-
+    <ul>
+        <li>Select unused courses for deletion</li> 
+        <li>Delete all unused courses</li>
+    </ul>
     The CourseCleanup app will also have a report showing all courses that were deleted using this tool.
 </p>
 
