adding fixes to services by removing asynchronicity

--- a/CourseCleanup/Views/Home/_CourseCleanup.cshtml
+++ b/CourseCleanup/Views/Home/_CourseCleanup.cshtml
@@ -40,7 +40,7 @@
                     </section>
 
                     <hr />
-                    <table>
+                    <table class="table table-striped">
                         <caption>Course Search Status</caption>
                         <thead>
                             <tr>
