--- a/CourseCleanup/Views/Home/DeletedCourses.cshtml
+++ b/CourseCleanup/Views/Home/DeletedCourses.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CourseCleanup.Models
-@model IEnumerable<DeletedCourse>
+@model IEnumerable<UnusedCourse>
 @{
     ViewBag.Title = "Deleted Courses";
 }
