--- a/CourseCleanup/Views/Home/_IndexHeader.cshtml
+++ b/CourseCleanup/Views/Home/_IndexHeader.cshtml
@@ -3,16 +3,20 @@
     <a href="https://ucdenver.instructure.com">https://ucdenver.instructure.com</a>
 </p>
 <p>
-    CourseCleanup is a HangFire web app that will allow an admin to run a query to list all unused courses for a given term range.  A course shell is a course that has no content or activity.  
+    CourseCleanup is a web app that will allow an admin to run a query to list all unused courses for a given term range.  Unused courses have no content or activity.
     Once the report is generated, the user will receive an email notifying them that their report is ready.  The user will be able to click a link to view the generated table of unused courses.
     <br /><br />
     The user will have the ability to:
     <ul>
-        <li>Select unused courses for deletion</li> 
+        <li>Select unused courses for deletion</li>
         <li>Delete all unused courses</li>
     </ul>
     The CourseCleanup app will also have a report showing all courses that were deleted using this tool.
 </p>
 
-@Html.ActionLink("Log Out", "LogOff", "Account", routeValues: null, htmlAttributes: new { id = "LogOutLink", @class = "float-right" })
+@using (Html.BeginForm("ExternalLogout", "Home", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    <button type="submit" id="LogOutLink" , class="linkButton float-right">Log Out</button>
+}
 <hr />
