--- a/CourseCleanup/Views/Shared/_Layout.cshtml
+++ b/CourseCleanup/Views/Shared/_Layout.cshtml
@@ -17,26 +17,26 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+
+    <div class="container body-content">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <div class="logo-container">
+                        <img id="logo" src="~/Content/cu-online.png" />
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Deleted Courses", "DeletedCourses", "Home")</li>
-                </ul>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel-group">
+                        <div class="panel panel-default">
+                            @RenderBody()
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Course Cleanup</p>
